# Colecci-n-de-Ejercicios-STL2

./: CMakeLists.txt  README.md
Ejercicio1/: Funciones.cpp  Funciones.h  main.cpp
Ejercicio2/: circulo.cpp  circulo.h  cuadrado.cpp  cuadrado.h  main.cpp  rectangulo.cpp  rectangulo.h  rombo.cpp  rombo.h  triangulo.cpp  triangulo.h
Ejercicio3/: main.cpp
Ejercicio4/: ciencias.h  main.cpp
Ejercicio5/: main.cpp
